//
// Copyright 2015, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "EventProto";
option java_package = "org.spine3.base";

import public "spine/base/command.proto";

// An identifier of an event.
message EventId {
    // ID of the command which originated the event.
    CommandId command_id = 1;

    // The duration between the moment of generation of CommandId and creation of this EventId.
    int64 delta_nanos = 2;
}

// Meta-information for an event.
message EventContext {
    // The id of the event.
    EventId event_id = 1;

    // The id of the aggregate the event was applied to.
    google.protobuf.Any aggregate_id = 2;

    // The version of the aggregate after the event was applied.
    int32 version = 3;

    // This field may be used for additional attributes that were not known at the time of
    // defining the corresponding event type.
    repeated google.protobuf.Any attributes = 4;
}

// A couple of an event and its context information.
message EventRecord {
    // Event data.
    google.protobuf.Any event = 1;

    // The context of the event.
    EventContext context = 2;
}
